--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,7 +77,7 @@ prost = "0.12"
 # ============================================
 # CLI
 # ============================================
-clap = { version = "4.4", features = ["derive"] }
+clap = { version = "4.4", features = ["derive", "env"] }
 
 # ============================================
 # Testing
