--- a/l0-cli/Cargo.toml
+++ b/l0-cli/Cargo.toml
@@ -33,7 +33,11 @@ serde_json = { workspace = true }
 
 # Utilities
 hex = "0.4"
+chrono = { workspace = true }
 
 # Logging
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+
+# Environment
+dotenvy = "0.15"
