--- a/.env.example
+++ b/.env.example
@@ -53,13 +53,71 @@ L0_NODE_ID=node_primary
 RUST_LOG=info
 
 # ===========================================
-# Anchor Configuration (Chain Anchoring)
+# P4 Layer - Bitcoin Anchoring Configuration
+# ===========================================
+
+# Enable Bitcoin anchoring
+L0_P4_BITCOIN_ENABLED=false
+
+# Bitcoin network: mainnet, testnet, signet, regtest
+L0_P4_BITCOIN_NETWORK=testnet
+
+# Bitcoin RPC endpoint
+L0_P4_BITCOIN_RPC_URL=http://localhost:18332
+
+# Bitcoin RPC authentication
+L0_P4_BITCOIN_RPC_USER=
+L0_P4_BITCOIN_RPC_PASS=
+
+# Bitcoin RPC timeout in seconds
+L0_P4_BITCOIN_RPC_TIMEOUT=30
+
+# Bitcoin wallet name (optional, for multi-wallet setups)
+# L0_P4_BITCOIN_WALLET=l0_anchor_wallet
+
+# Anchor fee rate in sat/vB (0 = auto-estimate)
+L0_P4_ANCHOR_FEE_RATE=0
+
+# Minimum confirmations required for finality
+L0_P4_MIN_CONFIRMATIONS=6
+
+# ===========================================
+# P4 Layer - Atomicals Protocol Configuration
+# ===========================================
+
+# Enable Atomicals inscriptions
+L0_P4_ATOMICALS_ENABLED=false
+
+# Atomicals ElectrumX API endpoint
+L0_P4_ATOMICALS_API_URL=https://ep.atomicals.xyz/proxy
+
+# Atomicals inscription prefix
+L0_P4_ATOMICALS_PREFIX=l0anchor
+
+# ===========================================
+# P4 Layer - Retry Configuration
+# ===========================================
+
+# Maximum retry attempts for failed anchors
+L0_P4_MAX_RETRIES=3
+
+# Initial retry delay in seconds
+L0_P4_RETRY_INITIAL_DELAY=60
+
+# Maximum retry delay in seconds
+L0_P4_RETRY_MAX_DELAY=3600
+
+# Retry delay multiplier (for exponential backoff)
+L0_P4_RETRY_MULTIPLIER=2.0
+
+# ===========================================
+# Legacy Anchor Configuration (deprecated, use P4 config above)
 # ===========================================
 
 # Ethereum RPC endpoint (optional)
 # L0_ETH_RPC_URL=https://mainnet.infura.io/v3/YOUR_PROJECT_ID
 
-# Bitcoin RPC endpoint (optional)
+# Bitcoin RPC endpoint (optional, use L0_P4_BITCOIN_RPC_URL instead)
 # L0_BTC_RPC_URL=http://localhost:8332
 
 # ===========================================
