--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "l0-db",
     "l0-network",
     "l0-signer",
+    "l0-p4",
     "l0-api",
     "l0-cli",
 ]
@@ -83,3 +84,25 @@ clap = { version = "4.4", features = ["derive", "env"] }
 # Testing
 # ============================================
 proptest = "1.4"
+
+# ============================================
+# Benchmarking
+# ============================================
+criterion = { version = "0.5", features = ["html_reports"] }
+
+# ============================================
+# Crypto and encoding
+# ============================================
+hex = "0.4"
+sha2 = "0.10"
+base64 = "0.21"
+
+# ============================================
+# HTTP client
+# ============================================
+reqwest = { version = "0.11", features = ["json"] }
+
+# ============================================
+# Retry and backoff
+# ============================================
+backoff = { version = "0.4", features = ["tokio"] }
