--- a/p2-storage/Cargo.toml
+++ b/p2-storage/Cargo.toml
@@ -21,7 +21,7 @@ l0-core = { path = "../l0-core" }
 soulbase-crypto = { workspace = true }
 
 # Async
-tokio = { workspace = true, features = ["fs", "io-util"] }
+tokio = { workspace = true, features = ["fs", "io-util", "time", "sync"] }
 async-trait = { workspace = true }
 
 # Serialization
@@ -36,12 +36,39 @@ thiserror = { workspace = true }
 
 # Logging
 tracing = { workspace = true }
+tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
 
 # UUID
 uuid = { version = "1.0", features = ["v4", "serde"] }
 
 # Hex encoding
 hex = { workspace = true }
+
+# Hashing
+sha2 = { workspace = true }
+
+# Random number generation
+rand = "0.8"
+
+# System info
+hostname = "0.4"
+num_cpus = "1.16"
+
+# Regex for policy matching
+regex = "1.10"
+
+# Futures/streams for async operations
+futures = "0.3"
+
+# HTTP client for IPFS API
+reqwest = { version = "0.11", features = ["json", "multipart"] }
+
+# URL encoding
+urlencoding = "2.1"
+
+# Configuration file formats
+toml = "0.8"
+serde_yaml = "0.9"
 
 [dev-dependencies]
 tempfile = "3.10"
