--- a/l0-core/Cargo.toml
+++ b/l0-core/Cargo.toml
@@ -31,6 +31,7 @@ thiserror = { workspace = true }
 
 # L0 特定依赖
 hex = "0.4"
+uuid = { version = "1.0", features = ["v4", "serde"] }
 
 [dev-dependencies]
 proptest = { workspace = true }
