--- a/l0-cli/Cargo.toml
+++ b/l0-cli/Cargo.toml
@@ -41,3 +41,8 @@ tracing-subscriber = { workspace = true }
 
 # Environment
 dotenvy = "0.15"
+
+# Input sanitization
+regex = "1.10"
+once_cell = "1.19"
+thiserror = { workspace = true }
