--- a/l0-p4/Cargo.toml
+++ b/l0-p4/Cargo.toml
@@ -26,6 +26,10 @@ backoff = { workspace = true }
 bitcoin = { version = "0.32", features = ["serde"] }
 secp256k1 = { version = "0.29", features = ["serde", "rand"] }
 
+# Storage backend
+sled = "0.34"
+
 [dev-dependencies]
 tokio-test = "0.4"
 mockito = "1.2"
+tempfile = "3.10"
